--- a/src/components/Buttons/ButtonNav/ButtonNav.module.scss
+++ b/src/components/Buttons/ButtonNav/ButtonNav.module.scss
@@ -47,3 +47,10 @@
 .btnReturn  {
     background-color: #16181b91;
 }
+
+.optionLabel {
+    margin-top: -0.25rem;
+    text-align: center;
+    font-size: 1rem;
+    color: $colorAccentOrange;
+}
