--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -31,3 +31,14 @@ a:active
     text-decoration: none;
     // color: '#adb5bdaa' !important; 
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
