--- a/src/components/Containers/NavSidebar/NavSidebar.module.scss
+++ b/src/components/Containers/NavSidebar/NavSidebar.module.scss
@@ -1,23 +1,25 @@
-@import "../../../style/variables.scss";
+@import '../../../style/variables.scss';
 // $colorAccentOrange;
 
 :root {
-    --toastify-icon-color-success: #F59F00 !important;
-    --toastify-color-success: #F59F00 !important;
+  --toastify-icon-color-success: #f59f00 !important;
+  --toastify-color-success: #f59f00 !important;
 }
 
 .sideBarNav {
-    display: flex;
-    flex-direction: column;
-    align-self: flex-end;
-    z-index: 100;
+  position: absolute;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+  z-index: 100;
 }
 
 .divDeveloper {
-    display: flex;
-    flex-direction: column;
-    // align-self: flex-end;
-    position: absolute;
-    top: 2rem;
-    align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  // align-self: flex-end;
+  position: absolute;
+  top: 2rem;
+  align-self: flex-start;
 }
