--- a/src/components/Profile/TestCard/TestCard.module.scss
+++ b/src/components/Profile/TestCard/TestCard.module.scss
@@ -47,10 +47,13 @@
 
 .coverFrame {
     width: 100%;
-    // height: 100%;
     height: 15rem;
     width: 14.5rem;
     border-radius: 0.5rem 0 0 0.5rem;
+
+    @media (min-width: 800px) {
+        width: 100%;
+    }
 }
 
 .coverOpen {
