--- a/src/components/Test/RadioInput/RadioInput.module.scss
+++ b/src/components/Test/RadioInput/RadioInput.module.scss
@@ -1,79 +1,77 @@
-@import "../../../style/variables.scss";
+@import '../../../style/variables.scss';
 
-input[type="radio"] {
-    display: none;
+input[type='radio'] {
+  display: none;
 }
 
 .radioContainer {
-    width: 100%;
-    height: 100%;
-    margin: 2px 0 2px 0;
-    cursor: pointer;
+  width: 100%;
+  height: 100%;
+  margin: 2px 0 2px 0;
+  cursor: pointer;
+
+  @media (min-width: 800px) {
+    width: 50%;
+  }
 }
 
 .textContainer,
-.textContainerChecked, 
+.textContainerChecked,
 .textContainerTrue,
 .textContainerFalse {
-    cursor: pointer;
-    height: 100%;
-    // min-height: 5rem;
-    min-height: 4rem;
-    width: 100%;
-    padding: 1rem;
-    // background-color: #1f2224;
-    background-color: #181b1e;
-    border: 1px solid #52585e57;
-    border-radius: 0.5rem;
+  cursor: pointer;
+  height: 100%;
+  // min-height: 5rem;
+  min-height: 4rem;
+  width: 100%;
+  padding: 1rem;
+  // background-color: #1f2224;
+  background-color: #181b1e;
+  border: 1px solid #52585e57;
+  border-radius: 0.5rem;
 
-    // NEW
-    display: flex;
-    align-items: center;
+  // NEW
+  display: flex;
+  align-items: center;
 
-    & span {
-        font-size: 1.4rem;
-        color: #ced4da;
+  & span {
+    font-size: 1.4rem;
+    color: #ced4da;
 
-        @media (min-width: 700px) {
-            font-size: 1.3rem;
-        }
-
-        @media only screen 
-        and (device-width: 375px) 
-        and (device-height: 667px) 
-        and (-webkit-device-pixel-ratio : 2) { 
-            font-size: 1.2rem;
-        }
-    
-        @media only screen 
-        and (device-width : 375px) 
-        and (device-height : 812px) 
-        and (-webkit-device-pixel-ratio : 3) { 
-            font-size: 1.2rem;
-        }
+    @media (min-width: 700px) {
+      font-size: 1.3rem;
     }
+
+    @media only screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+      font-size: 1.2rem;
+    }
+
+    @media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+      font-size: 1.2rem;
+    }
+  }
 }
 
 .textContainerChecked {
-    border: 1px solid #5e666e;
-    background-color: #2125295a;
-    & span {
-        color: $colorAccentOrange;
-    }
+  border: 1px solid #5e666e;
+  background-color: #2125295a;
+  & span {
+    color: $colorAccentOrange;
+  }
 }
 
 .textContainerTrue {
-    border: 1px solid $colorAccentOrange;
-    background-color: $colorAccentOrange;
-    & span {
-        color: #212529;
-    }
+  border: 1px solid $colorAccentOrange;
+  background-color: $colorAccentOrange;
+  & span {
+    color: #212529;
+  }
 }
 
 .textContainerFalse {
-    border: 1px solid rgba(227, 8, 44, 0.416);
-    background-color: rgba(227, 8, 44, 0.416);
-    & span {
-        color: white;
-    }
+  border: 1px solid rgba(227, 8, 44, 0.416);
+  background-color: rgba(227, 8, 44, 0.416);
+  & span {
+    color: white;
+  }
 }
