--- a/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
+++ b/src/components/Bloggers/BloggersHeader/BloggersHeader.module.scss
@@ -1,156 +1,8 @@
-@import "../../../style/variables.scss";
-
-.headerProfile {
-    position: relative;
-    margin-top: -0.5rem;
-    width: 100%;
-    // display: flex;
-    display: grid;
-    grid-template-columns: 4fr 6fr;
-    
-    justify-content: flex-start;
-    align-items: flex-end;
-    // align-items: flex-start;
-    padding: 1rem 0 2rem 0;
-
-    @media (min-width: 800px) {
-        grid-template-columns: 5fr 6fr 1fr;
-        column-gap: 2rem;
-    }
-
-}
-
-.containerDiv {
-    // max-width: 100%;
-    width: 100%;
-    margin-right: 1rem;
-    flex-shrink: 1;
-    align-self: flex-end;
-}
-.avatar {
-    background-color: #adb5bd;
-    // width: 8rem;
-    // height: 8rem;
-    // margin-right: 1rem;
-    width: 14.5rem;
-    height: 14.5rem;
-    margin-right: 2.5rem;
-
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center center;
-    flex-shrink: 0;
-}
-.name {
-    margin-top: 0.25rem;
-
-    text-align: left;
-    font-size: 1.8rem;
-    font-weight: 900;
-    color: #adb5bd;
-    line-height: 1.1;
-    // margin-bottom: 1rem;
-}
-
-.details {
-    margin-top: 2rem;
-    font-size: 1.4rem;
-    color: #adb5bd;
-    // color: $colorAccentOrange;
-}
-
-.fontGold {
-    // margin-top: 0.25rem;
-
-    font-size: 1.4rem;
-    color: $colorAccentOrange;
-    
-    // margin-bottom: 0.5rem;
-}
-
-
-
-.containerNumbers {
-    width: 100%;
-    display: flex;
-    // padding-bottom: 3rem;
-    // border-bottom: 1px solid #adb5bd1f;
-}
-
-.numberDiv {
-    position: relative;
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr 1fr 1fr;
-    @media (min-width: 800px) {
-        grid-template-columns: 3fr 3fr 3fr 1fr;
-        column-gap: 3rem;
-    }
-
-    justify-items: center;
-    // modification with numbers 3.3
-    align-items: flex-end; 
-    font-size: 1rem;
-    color: #adb5bd;
-    // color: $colorAccentOrange;
-    text-align: center;
-
-}
-.desktopFreeSpace {
-    display: none;
-    @media (min-width: 800px) {
-        display: flex;
-    }
-}
-
-.numberGold,
-.numberGrey {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-
-    font-size: 3rem;
-    font-weight: 200;
-    color: $colorAccentOrange;
-}
-
-.numberGrey {
-    // color: #edf0f2;
-    font-size: 3.2rem;
-    color: #adb5bd;
-}
-
-
-.socIcon {
-    height: 4rem;
-    // border: 1px solid $colorAccentOrange;
-    border-radius: 0.5rem;
-    margin: -1px;
-    // margin-right: 1.5rem;
-}
-
-.socBox {
-    display: flex;
-    width: 14.5rem;
-    border: 1px solid $colorAccentOrange;
-    border-radius: 0.5rem;
-    margin-right: 1rem;
-    // margin-top: 0.25rem;
-    // margin-bottom: 0.5rem;
-
-    // width: 100%;
-}
-
-.start {
-    // margin-top: 0.5rem;
-    // align-self: flex-start;
-    height: 100%;
-    align-self: center;
-    margin-right: 1rem;
-
-
-}
-
-.marginTop {
-    // margin-top: 0.75rem;
+.description {
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  color: #adb5bd;
+  width: 100%;
+  text-align: left;
+  align-self: end;
 }
